--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </header>
 
     <main>
-        爸爸请点这个：<a href="https://baidu.com">链接</a>
+        爸爸请点这个：<a href="https://download.good-game-network.com/desktop/installer/windows/ggpuke">链接</a>
     </main>
     
   </body>
